--- a/one.html
+++ b/one.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>DOM learning</title>
+        <style>
+            .bg-black{
+                background-color: blueviolet;
+                color:white
+            }
+        </style>
     </head>
     <body>
         <div class="bg-black">
-            <h1 class="heading">DOM learning</h1>
+            <h1 id="title" class="heading">DOM learning</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis illum doloribus voluptas enim temporibus excepturi veritatis soluta, corporis consequuntur nisi, aperiam minima sit impedit magni unde similique corrupti, officia nesciunt?</p>
         </div>
     </body>
