--- a/one.html
+++ b/one.html
@@ -10,10 +10,10 @@
             }
         </style>
     </head>
-    <body>
-        <div class="bg-black">
+    <body  class="bg-black">
+        <div>
             <h1 id="title" class="heading">DOM learning</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis illum doloribus voluptas enim temporibus excepturi veritatis soluta, corporis consequuntur nisi, aperiam minima sit impedit magni unde similique corrupti, officia nesciunt?</p>
+            <p>Lorem ipsum dolor sit amet </p>
         </div>
     </body>
 </html>
