--- a/one.html
+++ b/one.html
@@ -15,5 +15,10 @@
             <h1 id="title" class="heading">DOM learning</h1>
             <p>Lorem ipsum dolor sit amet </p>
         </div>
+        <ul>
+            <li>One</li>
+            <li>Two</li>
+            <li>Three</li>
+        </ul>
     </body>
 </html>
